[project]
name = "mylib-demo"
version = "0.1.0"
description = "Demo project for mylib"
readme = "README.md"
authors = [ { name="Ваше Ім’я", email="you@example.com" } ]
dependencies = [
  'mylib @ file://../practice_tasks'
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"